// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UIForgeActivityStream - Responsive Behavior > Snapshot rendering for visual regression > renders comfortable density consistently 1`] = `
<div
  class="activity-stream activity-stream--light activity-stream--with-timeline activity-stream--comfortable"
  data-density="comfortable"
  data-show-meta="true"
  data-theme="light"
  data-virtualized="false"
>
  <div
    class="activity-stream__container"
  >
    <div
      class="activity-stream__items"
    >
      <div
        class="activity-stream__date-separator"
      >
        <div
          class="activity-stream__date-label"
        >
          January 2024
        </div>
        <div
          class="activity-stream__date-line"
        />
      </div>
      <div
        class="activity-stream__item "
        data-event-id="1"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M11.93 8.5a4.002 4.002 0 01-7.86 0H.75a.75.75 0 010-1.5h3.32a4.002 4.002 0 017.86 0h3.32a.75.75 0 010 1.5h-3.32zM8 5a3 3 0 100 6 3 3 0 000-6z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            aria-expanded="false"
            class="activity-stream__header activity-stream__header--clickable"
            role="button"
            tabindex="0"
          >
            <div
              class="activity-stream__title"
            >
              Updated README.md
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
            <div
              class="activity-stream__toggle"
            >
              <svg
                class=""
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  d="M10 2L6 6M10 2L14 6M10 2V7.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
                <path
                  d="M3 10H17"
                  stroke="currentColor"
                  stroke-dasharray="1 2"
                  stroke-linecap="round"
                  stroke-width="1.5"
                />
                <path
                  d="M10 18L6 14M10 18L14 14M10 18V12.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="activity-stream__item "
        data-event-id="2"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 9.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
            />
            <path
              d="M8 0a8 8 0 100 16A8 8 0 008 0zM1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            class="activity-stream__header "
          >
            <div
              class="activity-stream__title"
            >
              Fixed bug in login form
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UIForgeActivityStream - Responsive Behavior > Snapshot rendering for visual regression > renders compact density consistently 1`] = `
<div
  class="activity-stream activity-stream--light activity-stream--with-timeline activity-stream--compact"
  data-density="compact"
  data-show-meta="true"
  data-theme="light"
  data-virtualized="false"
>
  <div
    class="activity-stream__container"
  >
    <div
      class="activity-stream__items"
    >
      <div
        class="activity-stream__date-separator"
      >
        <div
          class="activity-stream__date-label"
        >
          January 2024
        </div>
        <div
          class="activity-stream__date-line"
        />
      </div>
      <div
        class="activity-stream__item "
        data-event-id="1"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M11.93 8.5a4.002 4.002 0 01-7.86 0H.75a.75.75 0 010-1.5h3.32a4.002 4.002 0 017.86 0h3.32a.75.75 0 010 1.5h-3.32zM8 5a3 3 0 100 6 3 3 0 000-6z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            aria-expanded="false"
            class="activity-stream__header activity-stream__header--clickable"
            role="button"
            tabindex="0"
          >
            <div
              class="activity-stream__title"
            >
              Updated README.md
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
            <div
              class="activity-stream__toggle"
            >
              <svg
                class=""
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  d="M10 2L6 6M10 2L14 6M10 2V7.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
                <path
                  d="M3 10H17"
                  stroke="currentColor"
                  stroke-dasharray="1 2"
                  stroke-linecap="round"
                  stroke-width="1.5"
                />
                <path
                  d="M10 18L6 14M10 18L14 14M10 18V12.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="activity-stream__item "
        data-event-id="2"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 9.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
            />
            <path
              d="M8 0a8 8 0 100 16A8 8 0 008 0zM1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            class="activity-stream__header "
          >
            <div
              class="activity-stream__title"
            >
              Fixed bug in login form
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UIForgeActivityStream - Responsive Behavior > Snapshot rendering for visual regression > renders condensed density consistently 1`] = `
<div
  class="activity-stream activity-stream--light activity-stream--with-timeline activity-stream--condensed"
  data-density="condensed"
  data-show-meta="true"
  data-theme="light"
  data-virtualized="false"
>
  <div
    class="activity-stream__container"
  >
    <div
      class="activity-stream__items"
    >
      <div
        class="activity-stream__date-separator"
      >
        <div
          class="activity-stream__date-label"
        >
          January 2024
        </div>
        <div
          class="activity-stream__date-line"
        />
      </div>
      <div
        class="activity-stream__item "
        data-event-id="1"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M11.93 8.5a4.002 4.002 0 01-7.86 0H.75a.75.75 0 010-1.5h3.32a4.002 4.002 0 017.86 0h3.32a.75.75 0 010 1.5h-3.32zM8 5a3 3 0 100 6 3 3 0 000-6z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            aria-expanded="false"
            class="activity-stream__header activity-stream__header--clickable"
            role="button"
            tabindex="0"
          >
            <div
              class="activity-stream__title"
            >
              Updated README.md
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
            <div
              class="activity-stream__toggle"
            >
              <svg
                class=""
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  d="M10 2L6 6M10 2L14 6M10 2V7.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
                <path
                  d="M3 10H17"
                  stroke="currentColor"
                  stroke-dasharray="1 2"
                  stroke-linecap="round"
                  stroke-width="1.5"
                />
                <path
                  d="M10 18L6 14M10 18L14 14M10 18V12.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="activity-stream__item "
        data-event-id="2"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 9.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
            />
            <path
              d="M8 0a8 8 0 100 16A8 8 0 008 0zM1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            class="activity-stream__header "
          >
            <div
              class="activity-stream__title"
            >
              Fixed bug in login form
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UIForgeActivityStream - Responsive Behavior > Snapshot rendering for visual regression > renders with showMeta false consistently 1`] = `
<div
  class="activity-stream activity-stream--light activity-stream--with-timeline activity-stream--comfortable"
  data-density="comfortable"
  data-show-meta="false"
  data-theme="light"
  data-virtualized="false"
>
  <div
    class="activity-stream__container"
  >
    <div
      class="activity-stream__items"
    >
      <div
        class="activity-stream__date-separator"
      >
        <div
          class="activity-stream__date-label"
        >
          January 2024
        </div>
        <div
          class="activity-stream__date-line"
        />
      </div>
      <div
        class="activity-stream__item "
        data-event-id="1"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M11.93 8.5a4.002 4.002 0 01-7.86 0H.75a.75.75 0 010-1.5h3.32a4.002 4.002 0 017.86 0h3.32a.75.75 0 010 1.5h-3.32zM8 5a3 3 0 100 6 3 3 0 000-6z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            aria-expanded="false"
            class="activity-stream__header activity-stream__header--clickable"
            role="button"
            tabindex="0"
          >
            <div
              class="activity-stream__title"
            >
              Updated README.md
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
            <div
              class="activity-stream__toggle"
            >
              <svg
                class=""
                fill="none"
                height="16"
                viewBox="0 0 20 20"
                width="16"
              >
                <path
                  d="M10 2L6 6M10 2L14 6M10 2V7.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
                <path
                  d="M3 10H17"
                  stroke="currentColor"
                  stroke-dasharray="1 2"
                  stroke-linecap="round"
                  stroke-width="1.5"
                />
                <path
                  d="M10 18L6 14M10 18L14 14M10 18V12.5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="activity-stream__item "
        data-event-id="2"
      >
        <div
          class="activity-stream__timeline-marker"
        />
        <div
          class="activity-stream__icon"
        >
          <svg
            class=""
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 9.5a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
            />
            <path
              d="M8 0a8 8 0 100 16A8 8 0 008 0zM1.5 8a6.5 6.5 0 1113 0 6.5 6.5 0 01-13 0z"
            />
          </svg>
        </div>
        <div
          class="activity-stream__content"
        >
          <div
            class="activity-stream__header "
          >
            <div
              class="activity-stream__title"
            >
              Fixed bug in login form
            </div>
            <div
              class="activity-stream__timestamp"
            >
              1/15/2024
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
